--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "firebase": "^11.0.1",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14"
   }
